Moved more code to Kotlin

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,14 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AccountActivity">
+    tools:context=".ng3.activities.AccountActivity">
+
+    <de.eloc.eloc_control_panel.ng3.widgets.ElocAppBar
+        android:id="@+id/eloc_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:show_back_button="true"
+        app:title="@string/manage_account" />
 
     <ScrollView
         android:id="@+id/fields_layout"
