--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,14 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    tools:context=".ng2.activities.ChangePasswordActivity">
+    tools:context=".ng3.activities.ChangePasswordActivity">
+
+    <de.eloc.eloc_control_panel.ng3.widgets.ElocAppBar
+        android:id="@+id/eloc_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:show_back_button="true"
+        app:title="@string/change_password" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/current_password_layout"
