--- a/app/src/main/res/layout/activity_change_email_address.xml
+++ b/app/src/main/res/layout/activity_change_email_address.xml
@@ -8,7 +8,14 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    tools:context=".ng2.activities.ChangeEmailAddressActivity">
+    tools:context=".ng3.activities.ChangeEmailAddressActivity">
+
+    <de.eloc.eloc_control_panel.ng3.widgets.ElocAppBar
+        android:id="@+id/eloc_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:show_back_button="true"
+        app:title="@string/change_email_address" />
 
     <TextView
         android:layout_width="@dimen/auth_input_width"
