--- a/app/src/main/res/layout/layout_app_bar.xml
+++ b/app/src/main/res/layout/layout_app_bar.xml
@@ -84,6 +84,7 @@
             android:layout_marginVertical="4dp"
             android:background="@drawable/circle"
             android:backgroundTint="@color/connected"
+            app:layout_constraintBottom_toTopOf="@id/bottom_space"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/right_menu_button" />
 
@@ -102,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAppearance="@style/TextAppearance.Eloc.HeadlineSmall"
-            app:layout_constraintEnd_toStartOf="@id/connection_status_label"
+            app:layout_constraintEnd_toStartOf="@id/settings_button"
             app:layout_constraintStart_toEndOf="@id/padder"
             app:layout_constraintTop_toTopOf="@id/settings_button"
             tools:ignore="RtlSymmetry"
@@ -135,14 +136,16 @@
             android:layout_marginHorizontal="16dp"
             android:textColor="@color/user_label"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/bottom_space"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_text_view"
             tools:text="USER: Tester" />
 
         <Space
+            android:id="@+id/bottom_space"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
-            app:layout_constraintTop_toBottomOf="@id/connection_status_icon"
+            android:layout_height="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:viewBindingIgnore="true" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
