--- a/app/src/main/res/layout/layout_app_bar.xml
+++ b/app/src/main/res/layout/layout_app_bar.xml
@@ -137,7 +137,7 @@
             android:textColor="@color/user_label"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/bottom_space"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintTop_toBottomOf="@id/title_text_view"
             tools:text="USER: Tester" />
 
