--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -389,7 +389,7 @@
                     <TextView
                         android:id="@+id/last_accuracy_title_tv"
                         style="@style/IndentedTileTitle"
-                        android:text="@string/last_gps_accuracy"
+                        android:text="last_gps_accuracy"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/divider11" />
 
@@ -504,7 +504,7 @@
                     <TextView
                         android:id="@+id/last_location_title_tv"
                         style="@style/IndentedTileTitle"
-                        android:text="@string/last_gps_location"
+                        android:text="last_gps_location"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/divider16" />
 
