--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -72,12 +72,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintWidth_percent="0.5"
-                tools:visibility="invisible" />
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/start_detecting_button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:background="@color/detecting_off_button"
                 android:clickable="true"
                 android:elevation="16dp"
@@ -87,10 +87,11 @@
                 android:text="@string/start_detecting"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                app:layout_constraintBottom_toBottomOf="@id/start_recording_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/start_recording_button"
                 app:layout_constraintWidth_percent="0.5"
-                tools:visibility="invisible" />
+                tools:visibility="visible" />
 
             <ScrollView
                 android:id="@+id/content_scroll_view"
@@ -187,7 +188,8 @@
                         app:layout_constraintTop_toTopOf="@id/storage_gauge"
                         tools:text="295GB\nFree" />
 
-                    <TextView android:id="@+id/storage_text_view"
+                    <TextView
+                        android:id="@+id/storage_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/storage"
