--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -26,17 +26,10 @@
         tools:text="Item label" />
 
     <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/thin_divider"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/value_text_view" />
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/thick_divider"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/value_text_view" />
 
