--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -57,9 +57,23 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/instructions_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="?selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="@string/instructions"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
                 android:id="@+id/start_recording_button"
                 android:layout_width="0dp"
                 android:layout_height="72dp"
+                android:layout_marginBottom="16dp"
                 android:background="@color/recording_off_button"
                 android:clickable="true"
                 android:elevation="16dp"
@@ -69,7 +83,7 @@
                 android:text="@string/start_recording"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/instructions_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintWidth_percent="0.5"
                 tools:visibility="visible" />
