--- a/app/src/main/res/layout/layout_app_bar.xml
+++ b/app/src/main/res/layout/layout_app_bar.xml
@@ -6,17 +6,18 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="match_parent" android:id="@+id/constraint_layout"
         android:layout_height="wrap_content"
         android:background="@color/actionbar"
         android:orientation="horizontal"
         android:padding="0dp">
 
         <Space
-            android:id="@+id/spacer"
+            android:id="@+id/top_space"
             android:layout_width="match_parent"
-            android:layout_height="12dp"
+            android:layout_height="0.1dp"
             app:layout_constraintTop_toTopOf="parent"
+            tools:layout_height="12dp"
             tools:viewBindingIgnore="true" />
 
         <ImageButton
@@ -30,7 +31,7 @@
             android:scaleType="fitXY"
             android:src="@drawable/arrow_back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_space"
             app:tint="@color/white"
             tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
@@ -72,7 +73,7 @@
             android:scaleType="fitXY"
             android:src="@drawable/settings_outline"
             app:layout_constraintEnd_toStartOf="@id/right_menu_button"
-            app:layout_constraintTop_toBottomOf="@id/spacer"
+            app:layout_constraintTop_toBottomOf="@id/top_space"
             app:tint="@color/actionbar_icon"
             tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
 
@@ -123,8 +124,9 @@
         <Space
             android:id="@+id/bottom_space"
             android:layout_width="match_parent"
-            android:layout_height="8dp"
+            android:layout_height="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_height="4dp"
             tools:viewBindingIgnore="true" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
