--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <style name="ElocToolbarStyle" parent="Widget.Material3.Toolbar">
+        <item name="navigationIconTint">@color/white</item>
+        <item name="subtitleTextAppearance">@style/TextAppearance.Material3.TitleSmall</item>
+        <item name="subtitleTextColor">@color/user_label</item>
+        <item name="titleTextAppearance">@style/TextAppearance.Material3.ActionBar.Title</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
 </resources>
