--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -7,17 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".ng3.activities.DeviceActivity">
 
-    <de.eloc.eloc_control_panel.ng3.widgets.ElocAppBar
-        android:id="@+id/eloc_app_bar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:backButtonOpacity="0.5"
-        app:nameOpacity="0.55"
-        app:show_back_button="true"
-        app:show_settings_button="true"
-        app:show_user_name="true"
-        app:titleOpacity="0.65"
-        tools:title="eloc 56" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/app_bar_settings"
+            app:navigationIcon="@drawable/arrow_back"
+            tools:subtitle="user: mary.gandy"
+            tools:title="eloc 56" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
