--- a/app/src/main/res/values/old_themes.xml
+++ b/app/src/main/res/values/old_themes.xml
@@ -11,6 +11,7 @@
         <item name="android:statusBarColor">@color/actionbar</item>
         <item name="android:windowBackground">@color/window</item>
         <item name="android:textColor">@color/white</item>
+        <item name="toolbarStyle">@style/ElocToolbarStyle</item>
     </style>
 
     <style name="AppThemeMedium" parent="AppTheme">
